# sample_app

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  sample_app.sln.in
.github/: constants.env
.github/template/: README.md  template_name  template_repository
.github/workflows/: template-janitor.yml
CMake/: Generators.cmake
myproject/: CMakeLists.txt
myproject/inc/: logo_fonts.h  stdafx.h
myproject/src/: test.c
sample_app/: CMakeLists.txt  sample_app.vcxproj.in
sample_app/inc/: logo_fonts.h
